--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>简历炼金术 - AI 简历优化工具</title>
     <meta name="description" content="智能分析 · 毒舌点评 · STAR法则润色 · 职位匹配 - 让 AI 帮你打造一份无法拒绝的简历" />
     <meta name="author" content="简历炼金术" />
@@ -13,7 +14,7 @@
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
+    <meta name="twitter:site" content="@Anarkh-lee" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <!-- Google Fonts for Resume Templates -->
